--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 torch==2.8.0
-transformers>=4.55.2
+transformers>=4.57.6
 peft==0.6.0
 vllm==0.11.0
+trl>=0.15.0
+datasets>=2.14.0
+accelerate>=0.25.0
